feat: Migrate to quarkus based property source and move all the messagelog properties to proxy
Refs: XRDDEV-3030